--- a/wireframes.html
+++ b/wireframes.html
@@ -31,7 +31,7 @@
 		<section class="user-tasks">
 			<h1 class="template">User Tasks</h1>
 				<ol>
-					<li>Learn about how what the company values </li>
+					<li>Learn about what the company values </li>
 					<li>Order a bouquet of flowers for a special occasion, like an anniversary</li>
 					<li>Order a floral package for a large-scale event, like a wedding</li>
 					<li>Find the company's address, operating hours, and contact information</li>
