--- a/citations.html
+++ b/citations.html
@@ -5,7 +5,7 @@
 		
 	<head>
 		<meta charset="utf-8">
-		<title>PO1: Citations</title>
+		<title>Citations</title>
 		 <!-- Referenced from Week 3's coding tutorial and https://web.dev/responsive-web-design-basics/#viewport-->
      	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="css/normalize.css">
@@ -17,14 +17,15 @@
 	<body>
 		<h1>Citations</h1>
 		
+		<header>
 		<!--Navigation Bar-->
-		<nav class="nav-container">
-			<a href="index.html">Home</a>
-			<a href="wireframes.html">Wireframes</a>
-			<a href='sitemap.html'>Site Map</a>
-			<a href="styleguide.html">Styleguide</a>
-			<a href="citations.html">Citations</a>
-		</nav> 
+			 <nav class="grid">
+				<a href="index.html">Home</a>
+				<a href="wireframes.html">Wireframes</a>
+				<a href="styleguide.html">Styleguide</a>
+				<a href="citations.html">Citations</a>
+			</nav> 
+		</header>
 
 		<section class="citations">
 			<h1 class="template">Citations</h1>
