--- a/index.html
+++ b/index.html
@@ -1,12 +1,64 @@
-<!-- Basic HTML5 structure from https://gist.github.com/cpjobling/1988786 -->
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>...</title>
-  </head>
-  <body>
+<!-- Referenced Weeks 1 and 2 tutorials to build out structure -->
 
-  </body>
+<!doctype html>
+		
+	<head>
+		<meta charset="utf-8">
+		<title>Four Seasons Floral: Branding </title>
+
+		 <!-- Referenced from Week 3's coding tutorial and https://web.dev/responsive-web-design-basics/#viewport-->
+    	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+		<!--Referenced Week 2's CSS coding tutorial for linking CSS files-->
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/fonts.css">
+		<link rel="stylesheet" href="css/grids.css">
+	</head>
+
+	<body>
+		<h1>Four Seasons Floral: Branding</h1>
+
+		<header>
+			 <nav class="grid">
+				<a href="index.html">Home</a>
+				<a href="wireframes.html">Wireframes</a>
+				<a href="styleguide.html">Styleguide</a>
+				<a href="citations.html">Citations</a>
+			</nav> 
+		</header>
+
+		<!--Brand Definition -->
+		<section class="branding">
+			<section class="definition">
+			<h1 class="template">Brand Definition</h1>		
+				<h2>About Four Seasons Floral</h2>
+					<p> 
+						Four Seasons Floral is a family-owned and full-service floral shop based in Vancouver, BC. They create bespoke floral arrangements for any types of occasions.
+					</p>
+
+				<h2>Audience</h2>
+					<p>
+						Four Seasons Floral generally has a wide target audience considering people typically have different reasons to purchase flowers. However, the company best appeals to individuals and groups that value meticulous care throughout the entire process of flower arranging, bespoke floral arrangements, and accomodating customer service.
+					</p>
+
+				<h2>Unique Selling Proposition</h2>
+					<p> 
+						Four Seasons Floral strives to create thoughtful and memorable experiences through the language of flowers. They source locally from flower auctions and through foraging from their own backyards. Four Season Florals carefully inspects each stem, cleans and cares for flowers in a way that meets their high standards.
+					</p>
+			</section> 
+	
+
+			<section class="art-direction">
+				<h1 class="template">SAMPLE ART DIRECTION</h1>	
+					<figure>
+						<img src="img/art-direction-sample.png" alt="A moodboard for a potential art direction.">
+						<figcaption>A moodboard for a potential art direction. </figcaption>
+					</figure>
+			</section>
+		</section> <!--Branding Ends-->
+		
+	</body>
+
 </html>
