Added code for new UI modules
Code for product listing, review post, nav bar, and form

--- a/wireframes.html
+++ b/wireframes.html
@@ -5,7 +5,7 @@
 		
 	<head>
 		<meta charset="utf-8">
-		<title>PO1: User Flow Wireframes</title>
+		<title>User Flow Wireframes</title>
 		 <!-- Referenced from Week 3's coding tutorial and https://web.dev/responsive-web-design-basics/#viewport-->
      	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="css/normalize.css">
@@ -18,14 +18,15 @@
 	<body>
 		<h1>User Flows</h1>
 
+		<header>
 		<!--Navigation Bar-->
-		<nav class="nav-container">
-			<a href="index.html">Home</a>
-			<a href="wireframes.html">Wireframes</a>
-			<a href='sitemap.html'>Site Map</a>
-			<a href="styleguide.html">Styleguide</a>
-			<a href="citations.html">Citations</a>
-		</nav> 
+			 <nav class="grid">
+				<a href="index.html">Home</a>
+				<a href="wireframes.html">Wireframes</a>
+				<a href="styleguide.html">Styleguide</a>
+				<a href="citations.html">Citations</a>
+			</nav> 
+		</header>
 
 		<!--User Goals Section-->
 		<section class="user-tasks">
@@ -38,6 +39,17 @@
 					<li>Find if a user's location is serviced for delivery </li>
 				</ol>
 		</section> <!--User Goals Section Ends-->
+
+		<!--Site Map Section-->
+		<section class="sitemap">
+			<h1 class="template">Site Map</h1>
+			<figure>
+				<img src="img/sitemap.png" alt="A site map of the website.">
+				<figcaption>
+					A site map of the website specifying page types, templates, and UI modules within the templates.
+				</figcaption>
+			</figure>
+		</section> <!--Site Map Section Ends-->
 
 		<!--Wireframes Section-->
 		<section class="wireframes">
