--- a/citations.html
+++ b/citations.html
@@ -19,8 +19,9 @@
 		
 		<header>
 		<!--Navigation Bar-->
-			 <nav class="grid">
+			 <nav class="grid styleguide">
 				<a href="index.html">Home</a>
+				<a href="sitemap.html">Site Map</a>
 				<a href="wireframes.html">Wireframes</a>
 				<a href="styleguide.html">Styleguide</a>
 				<a href="citations.html">Citations</a>
@@ -37,24 +38,27 @@
 
 					<li>Open Classrooms. How to link HTML pages. Retrieved from <a href="https://openclassrooms.com/en/courses/2479876-build-your-website-with-html5-and-css3/2490386-creating-links">https://openclassrooms.com/en/courses/2479876-build-your-website-with-html5-and-css3/2490386-creating-links</a></li>
 
-
 					<li>W3schools. "How To - Animate Buttons". Retrieved from <a href="https://www.w3schools.com/howto/howto_css_animate_buttons.asp">https://www.w3schools.com/howto/howto_css_animate_buttons.asp</a></li>
 
 					<li>Faulds, John. "Styling Form Buttons". Retrieved from <a href="http://www.tyssendesign.com.au/articles/css/styling-form-buttons">http://www.tyssendesign.com.au/articles/css/styling-form-buttons</a></li>
 
 					<li>BoltBlock. Styling background colour to meet text length. Retrieved from <a href="https://stackoverflow.com/questions/9128902/css-background-color-to-text-size">https://stackoverflow.com/questions/9128902/css-background-color-to-text-size</a></li>
 
-					<li> CSS Flex Box Tutorials from Week 3. Retrieved from <a href="https://canvas.sfu.ca/courses/53156">https://canvas.sfu.ca/courses/531566</a></li>
+					<li> CSS flex box tutorials from Week 3. Retrieved from <a href="https://canvas.sfu.ca/courses/53156">https://canvas.sfu.ca/courses/531566</a></li>
 
-					<li> Flex Box Tutorial. Retrieved from <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/flex">https://developer.mozilla.org/en-US/docs/Web/CSS/flex</a></li>
+					<li> Flex box tutorial. Retrieved from <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/flex">https://developer.mozilla.org/en-US/docs/Web/CSS/flex</a></li>
 
-					<li> HTML Form Tag. Retrieved from <a href="https://www.w3schools.com/tags/tag_form.asp">https://www.w3schools.com/tags/tag_form.asp</a>
+					<li>W3schools. HTML form tag. Retrieved from <a href="https://www.w3schools.com/tags/tag_form.asp">https://www.w3schools.com/tags/tag_form.asp</a>
 
-					<li> Remove default outline on text inputs. Retrieved from <a href="https://stackoverflow.com/questions/1457849/how-to-remove-the-border-highlight-on-an-input-text-element"> https://stackoverflow.com/questions/1457849/how-to-remove-the-border-highlight-on-an-input-text-element </a>
+					<li> Stack Overflow. Remove default outline on text inputs. Retrieved from <a href="https://stackoverflow.com/questions/1457849/how-to-remove-the-border-highlight-on-an-input-text-element"> https://stackoverflow.com/questions/1457849/how-to-remove-the-border-highlight-on-an-input-text-element </a>
 
-					<li> Box shadow. Retrieved from <a href="https://www.w3schools.com/cssref/css3_pr_box-shadow.asp"> https://www.w3schools.com/cssref/css3_pr_box-shadow.asp </a>
+					<li> W3schools. Box shadow. Retrieved from <a href="https://www.w3schools.com/cssref/css3_pr_box-shadow.asp"> https://www.w3schools.com/cssref/css3_pr_box-shadow.asp </a>
 
-					<li> CSS Flex Box. Retrived from <a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/"> https://css-tricks.com/snippets/css/a-guide-to-flexbox </a>
+					<li> CSS-Tricks. CSS flex box. Retrived from <a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/"> https://css-tricks.com/snippets/css/a-guide-to-flexbox </a>
+
+					<li> W3Schools. Image hover overlay. Retrieved from <a href="https://www.w3schools.com/howto/howto_css_image_overlay.asp">https://www.w3schools.com/howto/howto_css_image_overlay.asp</a>
+
+					<li>W3Schools. Open link in new tab. Retrieved from <a href="https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_link_target">https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_link_target/a>
 
 				</ul>
 
