--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
 		<h1>Four Seasons Floral: Branding</h1>
 
 		<header>
-			 <nav class="grid">
+			<!--Navigation Bar-->
+			 <nav class="grid styleguide">
 				<a href="index.html">Home</a>
+				<a href="sitemap.html">Site Map</a>
 				<a href="wireframes.html">Wireframes</a>
 				<a href="styleguide.html">Styleguide</a>
 				<a href="citations.html">Citations</a>
