--- a/wireframes.html
+++ b/wireframes.html
@@ -20,8 +20,9 @@
 
 		<header>
 		<!--Navigation Bar-->
-			 <nav class="grid">
+			 <nav class="grid styleguide">
 				<a href="index.html">Home</a>
+				<a href="sitemap.html">Site Map</a>
 				<a href="wireframes.html">Wireframes</a>
 				<a href="styleguide.html">Styleguide</a>
 				<a href="citations.html">Citations</a>
@@ -38,26 +39,14 @@
 					<li>Find the company's address, operating hours, and contact information</li>
 					<li>Find if a user's location is serviced for delivery </li>
 				</ol>
-		</section> <!--User Goals Section Ends-->
-
-		<!--Site Map Section-->
-		<section class="sitemap">
-			<h1 class="template">Site Map</h1>
-			<figure>
-				<img src="img/sitemap.png" alt="A site map of the website.">
-				<figcaption>
-					A site map of the website specifying page types, templates, and UI modules within the templates.
-				</figcaption>
-			</figure>
-		</section> <!--Site Map Section Ends-->
+		</section> 
 
 		<!--Wireframes Section-->
 		<section class="wireframes">
-
 			<h1 class="template">User Flow Wireframes</h1>
 
 				<!--Secondary Navigation (Anchor Links)-->
-				<nav class="nav-secondary-item">
+				<nav class="grid sub-nav">
 					<a href="#task1">Task 1</a>
 					<a href="#task2">Task 2</a>
 					<a href="#task3">Task 3</a>
@@ -140,7 +129,7 @@
 					High-fidelity mockups of the company's home page for a desktop view (left) and mobile view (right).
 				</figcaption> -->
 			</figure>
-		</section> <!--Mock Ups Section Ends-->
+		</section>
 
 		
 	</body>
