--- a/citations.html
+++ b/citations.html
@@ -58,8 +58,8 @@
 
 					<li> W3Schools. Image hover overlay. Retrieved from <a href="https://www.w3schools.com/howto/howto_css_image_overlay.asp">https://www.w3schools.com/howto/howto_css_image_overlay.asp</a>
 
-					<li>W3Schools. Open link in new tab. Retrieved from <a href="https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_link_target">https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_link_target/a>
-
+					<li>W3Schools. Open link in new tab. Retrieved from <a href="https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_link_target">https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_link_target</a>
+					</li>
 				</ul>
 
 			<h2>Assets</h2>
