--- a/styleguide.html
+++ b/styleguide.html
@@ -487,21 +487,20 @@
 
 						<h2> Sample: </h2>
 							<div class="container-product-listing">
-									<figure class ="product-item">
+									<div class ="product-item">
 									  	 <img src="img/product-lovers-sunrise.jpg" alt="Photo of bouquet being held">
-									  	 <figcaption>Lover's Sunrise</figcaption>
+									  	  <p class="product-name">Lover's Sunrise</p>
 										  <p class ="price">$70.99</p> 
 										  <div class="btn-position">
 												<a class ="btn-quick-add" href="#"> + Quick Add </a>
 									 	  </div>  
-									</figure>
+									</div>
 							</div> <!--.container-product-listing ends-->
 			    </section>
 
 			  
 			     <section> 
 				      <h1>Review Template</h1>
-
 				      <h2>HTML Code:</h2>
 		       			 <code>
 			       			 &lt;div class="review"&gt;<br>
@@ -552,6 +551,7 @@
 								}
 						</code>
 
+					  <h2> Sample: </h2>
 				      <div class="review">
 				      	  <h2> Reviews <a href="#">(15)</a></h2>
 				      	  <div>
