Added images of missing flows and updated code
Added wireframes for tasks 6, 7, 8

--- a/wireframes.html
+++ b/wireframes.html
@@ -38,6 +38,9 @@
 					<li>Order a floral package for a large-scale event, like a wedding</li>
 					<li>Find the company's address, operating hours, and contact information</li>
 					<li>Find if a user's location is serviced for delivery </li>
+					<li>See reviews and be able to leave own reviews </li>
+					<li>Be informed of special events or sales</li>
+					<li>Be informed of products that are new, on sale, and out of stock</li>
 				</ol>
 		</section> 
 
@@ -52,86 +55,69 @@
 					<a href="#task3">Task 3</a>
 					<a href="#task4">Task 4</a>
 					<a href="#task5">Task 5</a>
+					<a href="#task6">Task 6</a>
+					<a href="#task7">Task 7</a>
+					<a href="#task8">Task 8</a>
 				</nav> 
 
 
 				<!--Task 1-->
 				<section id="task1">
-					<h2>Task 1: Learn about what the company values</h2>
-						<figure>
-							<img src="img/wireframes/task1.png" alt="Desktop and mobile userflows for Task 1: Learn about what the company values">
-							<!-- <figcaption>
-								Desktop  and mobile userflows that illustrate how a user would learn about what the company values.
-							</figcaption> -->
-						</figure>
+					<h2>Learn about what the company values</h2>
+						<img src="img/wireframes/task1.png" alt="Desktop and mobile userflows for Task 1: Learn about what the company values">
 				</section>
 
 
 				<!--Task 2-->
 				<section id="task2">
-					<h2>Task 2: Order a bouquet of flowers for an anniversary</h2>
-
-						<figure>
-							<!-- Referenced w3schools.com to resize images using width and height-->
-							<img src="img/wireframes/task2.png" alt="Desktop and mobile userflows for Task 2: Order a bouquet of flowers for an anniversary." >
-							<!-- <figcaption>
-								Desktop  and mobile userflows that illustrate how a user would order a bouquet of flowers for an anniversary.
-							</figcaption> -->
-						</figure>
+					<h2>Order a bouquet of flowers for an anniversary</h2>
+						<img src="img/wireframes/task2.png" alt="Desktop and mobile userflows for Task 2: Order a bouquet of flowers for an anniversary." >
 				</section>
 
 				<!--Task 3-->
 				<section id="task3">
-					<h2>Task 3: Order a floral package for a wedding.</h2>
-
-						<figure>
-							<img src="img/wireframes/task3.png" alt="Desktop and mobile  userflows for Task 3: Order a floral package for a wedding.">
-							<!-- <figcaption>
-								Desktop userflow that illustrates how a user would order a floral package for a wedding.
-							</figcaption> -->
-						</figure>				
+					<h2>Order a floral package for a wedding.</h2>
+						<img src="img/wireframes/task3.png" alt="Desktop and mobile  userflows for Task 3: Order a floral package for a wedding.">			
 				</section>
 
 
 				<!--Task 4-->
 				<section id="task4">
-					<h2>Task 4: Find the company's address, operating hours, and contact information</h2>
-
-						<figure>
-							<img src="img/wireframes/task4.png" alt="Desktop and mobile userflows for Task 4.">
-							<!-- <figcaption>
-								Desktop and mobile userflows that illustrate how a user would find the company's address, operating hours, and contact information.
-							</figcaption> -->
-						</figure>
-							
+					<h2>Find the company's address, operating hours, and contact information</h2>
+						<img src="img/wireframes/task4.png" alt="Desktop and mobile userflows for Task 4.">			
 				</section>
-
 
 				<!--Task 5-->
 				<section id="task5">
-					<h2>Task 5: Find out if my location is serviced for delivery.</h2>
-
-						<figure>
-							<img src="img/wireframes/task5.png" alt="Desktop and mobile userflows for Task 5: Find out if a user's location is serviced for delivery.">
-							<!-- <figcaption>
-								Desktop and mobile user flowsuserflow that illustrate how a user would find out if their location is serviced for delivery.
-							</figcaption> -->
-						</figure>
+					<h2>Find out if my location is serviced for delivery.</h2>
+						<img src="img/wireframes/task5.png" alt="Desktop and mobile userflows for Task 5: Find out if a user's location is serviced for delivery.">
 				</section>
+
+				<!--Task 6-->
+				<section id="task6">
+					<h2>View and have the ability to write a product review.</h2>
+						<img src="img/wireframes/task6.png" alt="Desktop and mobile userflows for Task 6: View and have the ability to write a product review.">
+				</section>
+
+				<!--Task 7-->
+				<section id="task7">
+					<h2>Be informed of special events or sales.</h2>
+						<img src="img/wireframes/task7.png" alt="Desktop and mobile userflows for Task 7: Be informed of special events or sales">
+				</section>
+
+				<!--Task 8-->
+				<section id="task8">
+					<h2>Be informed of products that are new, on sale, and out of stock.</h2>
+						<img src="img/wireframes/task8.png" alt="Desktop and mobile userflows for Task 8: Be informed of products that are new, on sale, and out of stock">
+				</section>
+
 		</section> <!--Wireframes Section Ends-->
 
 		<!--Mock Ups Section-->
 		<section class="mockups">
-			<h1 class="template">MOCK UP EXAMPLE</h1>
-			<figure>
+			<h1 class="template">MOCK UP EXAMPLE</h2>
 				<img src="img/home-mockups.png" alt="High-fidelity mockups of the company's home page for a desktop view (left) and mobile view (right).">
-				<!-- <figcaption>
-					High-fidelity mockups of the company's home page for a desktop view (left) and mobile view (right).
-				</figcaption> -->
-			</figure>
 		</section>
 
-		
 	</body>
-
 </html>
