Added product description module
individual product description module

--- a/styleguide.html
+++ b/styleguide.html
@@ -503,6 +503,49 @@
 							</div> <!--.container-product-listing ends-->
 			    </section>
 
+	<!--Indiv product description module-->
+
+				<section>
+					<h1>Individual Product Description</h1>
+					<h2>CSS Code:</h2>
+					<h2>HTML Code</h2>
+					<h2>Sample:</h2>
+
+					<img src="img/rating-reviews.png" alt="img" width="600px" width="600px">
+					<!-- <div class="product-mod-container">
+						<div class="product-mod-image">
+							<img src="img/product-mod-image.png" alt="image of flower" width="350px" height="550px">
+						</div>
+					<h2 class="product-mod-name">Lover's Sunrise</h2>
+					<br>
+					<div class="review-star-rating">
+							<p>&#9733;</p>
+							<p>&#9733;</p>
+							<p>&#9733;</p>
+							<p>&#9733;</p>
+							<p>&#9733;</p> -->
+					</div>
+
+					</div>
+
+					</div>
+
+				</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 			     <section>
 				      <h1>Review Template</h1>
