Updated icon + fixed nav bar
small changes to fb icon and nav bar color

--- a/styleguide.html
+++ b/styleguide.html
@@ -375,7 +375,7 @@
 							</code>
 
 						<h2> Sample: </h2>
-							<nav class="grid">
+							<nav class="grid topnav">
 						          <div class="grid-col-1of2 logo">
 						                 <!-- <a href="index.html">Four Seasons Floral</a> -->
 						                 <a href="#"><img src="img/logo.png" alt="Logo of company" width="120" height="30"></a>
@@ -504,48 +504,33 @@
 			    </section>
 
 	<!--Indiv product description module-->
+				     <section>
+				       	<h1>Detailed Product View</h1>
+				       		<h2>CSS Code:</h2>
+			       			 <code>
 
-				<section>
-					<h1>Individual Product Description</h1>
-					<h2>CSS Code:</h2>
-					<h2>HTML Code</h2>
-					<h2>Sample:</h2>
+			       			 </code>
 
-					<img src="img/rating-reviews.png" alt="img" width="600px" width="600px">
-					<!-- <div class="product-mod-container">
-						<div class="product-mod-image">
-							<img src="img/product-mod-image.png" alt="image of flower" width="350px" height="550px">
-						</div>
-					<h2 class="product-mod-name">Lover's Sunrise</h2>
-					<br>
-					<div class="review-star-rating">
-							<p>&#9733;</p>
-							<p>&#9733;</p>
-							<p>&#9733;</p>
-							<p>&#9733;</p>
-							<p>&#9733;</p> -->
-					</div>
+			       			 <h2> HTML Code: </h2>
+									 <code>
+									 </code>
 
-					</div>
+		       			 	<h2> Sample: </h2>
+								<div class="grid" id="detailed-product">
+									<div class="product-img">
+										<img src="img/product-lovers-sunrise.jpg" alt="Photo of Lover's Sunrise bouquet">
+									</div>
+									<div class="product-desc">
+										<h1 class="web">Lover's Sunrise</h1>
 
-					</div>
-
-				</section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+										<h2 class="web product"> $100.00 <h2>
+										<p class="description-web-product">
+											This lovely bouquet includes purple hydrangea, light pink spray roses and white asiatic lilies arranged that can either be wrapped beautifully in recyclable paper or in a glass vase.
+										</p>
+										<button type="button" class="btn-main">Add to Cart</button>
+									</div> <!--.product-desc ends -->
+								</div><!--.grid.detailed-product ends -->
+				     </section>
 
 			     <section>
 				      <h1>Review Template</h1>
